# meter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/meter/: __init__.py  config.py  logger.py
src/meter/book/: index.ipynb
src/meter/data/: eth_v_sol.parquet
src/meter/frame/: __init__.py
src/meter/query/: __init__.py  eth_query.sql  solRay_query.sql  solSlnd_query.sql
