[project]
name = "meter"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Jamil Bousquet", email = "jamil.bousquet@gmail.com" }]
dependencies = [
    "polars>=0.20.17",
    "flipside>=2.0.8",
    "seaborn>=0.13.2",
    "jupyterlab>=4.1.5",
    "pyarrow>=15.0.2",
]
readme = "README.md"
requires-python = ">= 3.11.8"

[project.scripts]
pipeline = 'meter:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black>=24.3.0", "python-dotenv>=1.0.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/meter"]
